--- a/network/index.html
+++ b/network/index.html
@@ -277,7 +277,7 @@
 <p>NUT is the simplest way to install over the network. It is a piece of software that will serve your NSP's from your PC to your switch over the network, or through USB. All NSP's must have "[titleid]" in the file name to be indexed by NUT to show up in "New Games", "New DLC", and "New Updates".</p>
 <p>You can download NUT at https://github.com/blawar/nut/.</p>
 <h1 id="http-https">HTTP / HTTPS</h1>
-<p>Tinfoil downloads the html (or json), and parses out the links. Tinfoil supports relative paths, and absolute if you want to link to a different server, or even another device such as your microSD card.</p>
+<p>Tinfoil downloads the html (or json) and parses out the links. Tinfoil supports relative paths, and absolute if you want to link to a different server, or even another device such as your microSD card.</p>
 <p>Tinfoil is known to work with Windows IIS, Apache, and Nginx. Though it should work with any HTTP server that supports ranged requests.</p>
 <h2 id="headers-sent">Headers Sent</h2>
 <p>Tinfoil will send a few custom headers when requesting a directory only (not files):</p>
@@ -304,14 +304,14 @@
 <p>Both files and folders follow the same format.  If specifying by the google file id, use gdrive:AAAAAAAAAAAAAAAAA (notice lack of forward slash).  If specifying a path (only works with OAuth) use gdrive:/root/folder1/file.zip</p>
 <h2 id="auth">Auth</h2>
 <h3 id="oauth">OAuth</h3>
-<p>Google Drive OAuth has the highest priority, and will always be used if setup.  OAuth is the only method to access and list private files.  You must set up google drive OAuth within NUT, and then conenct Tinfoil to NUT via network or USB to transfer the OAuth token(s).</p>
+<p>Google Drive OAuth has the highest priority and will always be used if setup.  OAuth is the only method to access and list private files.  You must set up google drive OAuth within NUT, and then connect Tinfoil to NUT via network or USB to transfer the OAuth token(s).</p>
 <h3 id="api-key">API Key</h3>
 <p>Specifying an API key allows you to do authed requests to access private files, however listing files will not work.</p>
 <h3 id="public">Public</h3>
 <p>This is the least reliable, however it supports listing and downloading public files.</p>
 <h1 id="dropbox">Dropbox</h1>
 <p>Access Token
-You need an API key to ue this. Go to https://www.dropbox.com/developers/apps and create a new app, and then click the "generate access token" button to generate an access token to use with Tinfoil.</p>
+You need an API key to use this. Go to https://www.dropbox.com/developers/apps and create a new app, and then click the "generate access token" button to generate an access token to use with Tinfoil.</p>
 <p>Adding the location
 You can edit the locations.conf file directly by adding an entry for dropbox://token:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@api.dropbox.com/ where XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX is your access token.</p>
                 
