--- a/network/index.html
+++ b/network/index.html
@@ -316,6 +316,12 @@
 <pre><code>1f:file_id#name.txt
 </code></pre>
 
+<h1 id="split-files-jbod">Split files (JBOD)</h1>
+<p>If your filesystem / storage provider has a max file size, tinfoil supports split files using an index.  Example index file entry:</p>
+<pre><code>jbod:10000000/sdmc%3A%2Fbah%2Fxaa/sdmc%3A%2Fbah%2Fxab/sdmc%3A%2Fbah%2Fxac/sdmc%3A%2Fbah%2Fxad/sdmc%3A%2Fbah%2Fxae/sdmc%3A%2Fbah%2Fxaf/sdmc%3A%2Fbah%2Fxag/sdmc%3A%2Fbah%2Fxah/sdmc%3A%2Fbah%2Fxai/4036670/sdmc%3A%2Fbah%2Fxaj#filename.zip
+</code></pre>
+
+<p>The first number is the size of the following chunks.  The chunk size can be changed at anytime, and is often done so for the last chunk since it is often smaller.  The chunks are urlencoded and seperated by forward slashes.</p>
 <h2 id="url-format">URL Format</h2>
 <p>Both files and folders follow the same format.  If specifying by the google file id, use gdrive:AAAAAAAAAAAAAAAAA (notice lack of forward slash).  If specifying a path (only works with OAuth) use gdrive:/root/folder1/file.zip</p>
 <h2 id="auth">Auth</h2>
