--- a/site/network/index.html
+++ b/site/network/index.html
@@ -335,7 +335,7 @@ A number in the path changes the file / chunk size.  It can be changed at any ti
 
 <p>The first number is the size of the following chunks.  The chunk size can be changed at anytime, and is often done so for the last chunk since it is often smaller.  The chunks are urlencoded and seperated by forward slashes.</p>
 <p>An example python script to encrypt the files is located here:</p>
-<p><a href="files/encrypt_nsz.py">encrypt.py</a></p>
+<p><a href="../files/encrypt_nsz.py">encrypt_nsz.py</a></p>
 <h2 id="url-format">URL Format</h2>
 <p>Both files and folders follow the same format.  If specifying by the google file id, use gdrive:AAAAAAAAAAAAAAAAA (notice lack of forward slash).  If specifying a path (only works with OAuth) use gdrive:/root/folder1/file.zip</p>
 <h2 id="auth">Auth</h2>
